# webscraping-fastapi-celery

./: .eslintrc.js  .prettierrc  LICENSE  Procfile  README.md  docker-compose.yml  nuxt.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
app/infra/: __init__.py  cache.py  web_browser.py
app/metrics/: __init__.py  wordometers.py
app/web_app/: main.py
client/components/: Navbar.vue
client/layouts/: default.vue
client/pages/: florestas.vue  home.vue  index.vue
docker/: dev-web.dockerfile
dockerfiles/: dev-web.dockerfile
etc/: gunicorn_conf.py  redis-dev.conf  settings.example.json
scripts/: dev-configure-python.sh  start-reload.sh
