[tool.poetry]
name = "webscraping-fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
